[gd_scene load_steps=6 format=3 uid="uid://twiydnm63mie"]

[ext_resource type="Texture2D" uid="uid://wabraobwxaj6" path="res://Tilemap/Sprites/roguelikeDungeon_transparent.png" id="1_deiiv"]
[ext_resource type="Script" path="res://scripts/stall.gd" id="1_w0gu2"]
[ext_resource type="Script" path="res://scenes/spriteScenes/BuyZone.gd" id="3_2l3aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6ahs"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igmg8"]
size = Vector2(18, 16)

[node name="Stall" type="StaticBody2D"]
z_index = 1
script = ExtResource("1_w0gu2")

[node name="ReadyStall" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_deiiv")
region_enabled = true
region_rect = Rect2(0, 85, 16, 16)

[node name="BrokenStall" type="Sprite2D" parent="."]
texture = ExtResource("1_deiiv")
region_enabled = true
region_rect = Rect2(68, 102, 16, 16)

[node name="ItemSlot" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_y6ahs")

[node name="BuyZone" type="Area2D" parent="."]
visible = false
script = ExtResource("3_2l3aa")

[node name="BuyZoneCollisionShape2D" type="CollisionShape2D" parent="BuyZone"]
shape = SubResource("RectangleShape2D_igmg8")

[connection signal="body_entered" from="BuyZone" to="BuyZone" method="_on_body_entered"]
